@startuml クラス図


package Player{
class PlayerState{
+weapon
+hp
+ammo
+speed
}

class PLMove
class PLShot
class PLtouch

interface IKeyPad
class KeyPad

KeyPad --o IKeyPad
IKeyPad <- PLMove : ob
PlayerState <.left. PLShot : ob,write
PlayerState <.. PLMove : ob,write
PlayerState <.. PLtouch : write
}

package Itouchable{
    interface IBulletTouchable
    interface IPlayerTouchable
}
    IPlayerTouchable ..> PLtouch : 接触処理 

package Weapon{
    class weapon
    
    class bullet{
        +Init
        +Shot
        +SonotaMoromoro
    }
    
    class weaponState{
        +speed
        +bullet
        +MaxAmmo
        +andmore
    }

    class PlayersBullet
    weapon *-- bullet
    weapon *-- weaponState
    weaponState<-left- bullet : 値参照
    bullet <|-- EnemyBullet
    IBulletTouchable <|.Up. EnemyBullet
    bullet <|-- PlayersBullet

}



package Enemy{
    class TekiMove
    class TekiTouch
    class TekiShot
    class TekiAI
    class TekiState

    TekiState <.. TekiMove
    TekiAI <.. TekiMove
    TekiState <.. TekiTouch
    TekiState <.. TekiShot
    Itouchable <|.up. TekiTouch
    TekiState *-- EnemyBullet 
    IBulletTouchable ..> PlayersBullet :接触処理
}

package GameDealer{
    class GameMode
    class UIWriter
    class GameModeDealer

    GameMode <-up- UIWriter : ob
    GameMode <-up- GameModeDealer

    PlayerState <--up- GameModeDealer : ob

}

@enduml